add dtos and change restaurant componenet